# safe-manually-drop.rs

./: Cargo.toml  README.md  cargo_publish.sh
.cargo/: config.toml
.github/workflows/: CI.yml  future-proof.yml
src/: _lib.rs  appendix.md  compile_fail_tests.md
tests/: defer.rs  transaction.rs
